✨ feat: updating social links

--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -84,7 +84,7 @@ eleventyImport:
 				{% emoji "📺" %} I love all kinds of animation (anime, cartoons, etc.).
 			</li>
 			<li>
-				{% emoji "🌏" %} I live on the edge of Bunurong and Wurundjeri Country, near <span class="[ p-locality ]">Naarm (Melbourne)</span>, <span class="[ p-country-name ]">Australia</span>.
+				{% emoji "🌏" %} I live on the edge of Bunurong and Wurundjeri Country, near <span class="[ p-locality ]">Naarm (Melbourne</span>, <span class="[ p-country-name ]">Australia</span>).
 			</li>
 			<li class="[ spotify-playing ]">
 				{% emoji "🎵" %} The last song I listened to was "<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="song">Never Gonna Give You Up</a>" by <em class="artist">Rick Astley</em>.
@@ -94,25 +94,21 @@ eleventyImport:
 			<h2>Find me on:</h2>
 			<ul class="[ social-links ][ flow ]">
 				<li>
-					<a href="https://twitter.ellyloel.com" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-						{%- inlineIcon "fab:twitter" -%}
-						<del datetime="2022-11-18" cite="https://twitter.ellyloel.com/1593505830347100160/">
-							<span>Twitter</span>
-						</del>
+					<a href="https://elly.to/ama" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "far:circle-question" -%}
+						<span>Ask me anything</span>
 					</a>
 				</li>
 				<li>
 					<a href="https://front-end.social/@elly" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
 						{%- inlineIcon "fab:mastodon" -%}
-						<ins datetime="2022-11-18" cite="https://twitter.ellyloel.com/1593505830347100160/">
-							<span>Mastodon</span>
-						</ins>
+						<span>Mastodon</span>
 					</a>
 				</li>
 				<li>
-					<a href="https://elly.to/ama" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-						{%- inlineIcon "far:circle-question" -%}
-						<span>Ask me anything</span>
+					<a href="https://www.threads.net/@ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "local:Threads" -%}
+						<span>Threads</span>
 					</a>
 				</li>
 				<li>
@@ -126,6 +122,63 @@ eleventyImport:
 						{%- inlineIcon "fab:linkedin" -%}
 						<span>LinkedIn</span>
 					</a>
+				</li>
+				<li>
+					<a href="https://twitter.ellyloel.com" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "fab:twitter" -%}
+						<del datetime="2022-11-18" cite="https://twitter.ellyloel.com/1593505830347100160/">
+							<span>Twitter</span>
+						</del>
+					</a>
+				</li>
+				<li>
+					<details>
+						<summary>More links</summary>
+						<ul class="[ flow ]">
+							<li>
+								<a href="https://instagram.com/elly.louise.loel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+									{%- inlineIcon "fab:instagram" -%}
+									<span>Personal Instagram</span>
+								</a>
+							</li>
+							<li>
+								<a href="https://instagram.com/ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+									{%- inlineIcon "fab:instagram" -%}
+									<span>"Professional" Instagram</span>
+								</a>
+							</li>
+							<li>
+								<a href="https://tumblr.com/ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+									{%- inlineIcon "fab:tumblr" -%}
+									<span>Tumblr</span>
+								</a>
+							</li>
+							<li>
+								<a href="https://t2.social/ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+									{%- inlineIcon "local:t2" -%}
+									<span>T2</span>
+								</a>
+							</li>
+							<li>
+								<a href="https://cohost.org/ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+									{%- inlineIcon "local:cohost" -%}
+									<span>Cohost</span>
+								</a>
+							</li>
+							<li>
+								<a href="https://pinterest.com/ellyloel/" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+									{%- inlineIcon "fab:pinterest" -%}
+									<span>Pinterest</span>
+								</a>
+							</li>
+							<li>
+								<a href="https://dribbble.com/ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+									{%- inlineIcon "fab:dribbble" -%}
+									<span>Dribbble</span>
+								</a>
+							</li>
+						</ul>
+					</details>
 				</li>
 			</ul>
 		</div>
