--- a/src/input/content/pages/mastodon.njk
+++ b/src/input/content/pages/mastodon.njk
@@ -10,54 +10,56 @@ eleventyNavigation:
 <ul class="[ feed ]">
 	{%- for post in mastodon.items -%}
 		<li class="[ h-entry ]">
-			<sl-card class="[ feed-item-card ]">
-				{%- if post.content | includes("<hr>") -%}
-					<details class="[ padding-0 ]">
-						<summary>
-							{{ post.content | split("<hr>") | first | striptags }}
-						</summary>
-					{%- endif -%}
-					<div class="[ flow ] [ e-content ]">
-						{%- if post.content | includes("<hr>") -%}
-							{{ post.content | replace(r/^.+<hr>/gim, "") | safe }}
-						{%- else -%}
-							{{ post.content | safe }}
-						{%- endif -%}
-						{%- if post["media:content"] -%}
-							<div style="columns: {{ post["media:content"].length }}">
-								{%- for image in post["media:content"] -%}
-									{%- if image["media:rating"][0]["_"] === "adult" -%}
-										<details class="[ padding-0 ]">
-											<summary>
-												Sensitive media
-											</summary>
-										{%- endif -%}
-										{%- set extension = image["$"].url | getUrlExtension -%}
-										{%- if extension === "mp4" -%}
-											<video aria-label="{{ image["media:description"][0]["_"] }}" src="{{ image["$"].url }}" controls loop playsinline></video>
-										{%- endif -%}
-										{%- image image["$"].url, image["media:description"][0]["_"] -%}
-										{%- if image["media:rating"][0]["_"] === "adult" -%}
-										</details>
-									{%- endif -%}
-								{%- endfor -%}
-							</div>
-						{%- endif -%}
-					</div>
+			<div class="[ feed-item-card ]">
+				<div class="[ flow ]">
 					{%- if post.content | includes("<hr>") -%}
-					</details>
-				{%- endif -%}
-				<div slot="footer" class="[ flex align-center ]">
-					<sl-tooltip content="Posted on {{ post.isoDate | dateToLocaleDateFull }}">
-						<span class="[ flex align-center gap-1ch ]">
-							<sl-icon class="[ inline-icon ]" library="fa" name="far-calendar" label="Posted on {{ post.isoDate | dateToLocaleDateFull }}"></sl-icon>
-							<a href="{{ post.link }}" class="[ u-url u-syndication ]" rel="syndication">
-								<time class="[ dt-published ]" datetime="{{ post.isoDate }}" style="line-height: 1;">{{ post.isoDate | dateToRelative }}</time>
-							</a>
-						</span>
-					</sl-tooltip>
+						<details class="[ padding-0 ]">
+							<summary>
+								{{ post.content | split("<hr>") | first | striptags }}
+							</summary>
+						{%- endif -%}
+						<div class="[ feed-item-card-body ] [ flow ] [ e-content ]">
+							{%- if post.content | includes("<hr>") -%}
+								{{ post.content | replace(r/^.+<hr>/gim, "") | safe }}
+							{%- else -%}
+								{{ post.content | safe }}
+							{%- endif -%}
+							{%- if post["media:content"] -%}
+								<div style="columns: {{ post["media:content"].length }}">
+									{%- for image in post["media:content"] -%}
+										{%- if image["media:rating"][0]["_"] === "adult" -%}
+											<details class="[ padding-0 ]">
+												<summary>
+													Sensitive media
+												</summary>
+											{%- endif -%}
+											{%- set extension = image["$"].url | getUrlExtension -%}
+											{%- if extension === "mp4" -%}
+												<video aria-label="{{ image["media:description"][0]["_"] }}" src="{{ image["$"].url }}" controls loop playsinline></video>
+											{%- endif -%}
+											{%- image image["$"].url, image["media:description"][0]["_"] -%}
+											{%- if image["media:rating"][0]["_"] === "adult" -%}
+											</details>
+										{%- endif -%}
+									{%- endfor -%}
+								</div>
+							{%- endif -%}
+						</div>
+						{%- if post.content | includes("<hr>") -%}
+						</details>
+					{%- endif -%}
+					<div class="[ feed-item-card-footer ]">
+						<sl-tooltip content="Posted on {{ post.isoDate | dateToLocaleDateFull }}">
+							<span class="[ flex align-center gap-1ch ]">
+								<sl-icon class="[ inline-icon ]" library="fa" name="far-calendar" label="Posted on {{ post.isoDate | dateToLocaleDateFull }}"></sl-icon>
+								<a href="{{ post.link }}" class="[ u-url u-syndication ]" rel="syndication">
+									<time class="[ dt-published ]" datetime="{{ post.isoDate }}" style="line-height: 1;">{{ post.isoDate | dateToRelative }}</time>
+								</a>
+							</span>
+						</sl-tooltip>
+					</div>
 				</div>
-			</sl-card>
+			</div>
 		</li>
 	{%- endfor -%}
 </ul>
