Adding a basic MPA view transition

--- a/src/_includes/meta.njk
+++ b/src/_includes/meta.njk
@@ -21,6 +21,7 @@
 <meta name="color-scheme" content="light dark">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#f9f9f9">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#111111">
+<meta name="view-transition" content="same-origin">
 
 {# Open Graph #}
 <meta property="og:site_name" content="{{ metadata.title }}">
