Fixing up home page content

--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -32,7 +32,7 @@ eleventyImport:
 				<details-utils animate>
 					<details class="[ interest-list ]">
 						<summary>
-							I'm a <span class="[ p-role ]">design engineer</span> with a strong interest in and passion for...
+							I'm a <span class="[ p-role ]">front-end developer/designer and accessibility specialist</span> with a strong interest in and passion for...
 						</summary>
 						<ul role="list" class="[ flow ]">
 							<li>
@@ -72,7 +72,7 @@ eleventyImport:
 				</details-utils>
 			</li>
 			<li>
-				{% emoji "🏳️‍⚧️" %} I'm an incredibly <span class="[ p-category ]">queer</span><span class="[ p-category ]">pansexual</span><span class="[ p-category ]">trans</span><span class="[ p-gender-identity ]">woman</span>. My pronouns are <a href="https://en.pronouns.page/@ellyloel" class="[ p-pronouns ]"><span class="[ p-pronoun ]">she</span>/<span class="[ p-pronoun ]">her</span></a>.
+				{% emoji "🏳️‍⚧️" %} I'm an incredibly <span class="[ p-category ]">queer</span> <span class="[ p-category ]">trans</span> <span class="[ p-gender-identity ]">woman</span>. My pronouns are <a href="https://en.pronouns.page/@ellyloel" class="[ p-pronouns ]"><span class="[ p-pronoun ]">she</span>/<span class="[ p-pronoun ]">her</span></a>.
 			</li>
 			<li>
 				{% emoji "🧠" %} I'm an <span class="[ p-category ]">AuDHD</span> (<span class="[ p-category ]">autistic</span> and <a href="/garden/adhd" class="[ p-category ]"><abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr></a>) <span class="[ p-category ]">neurodivergent</span>.
