Removing images from webmentions

--- a/src/_includes/webmentions-facepile.njk
+++ b/src/_includes/webmentions-facepile.njk
@@ -1,15 +1,21 @@
 <div class="[ facepile ]">
-	<p class="[ h3 ]">
-		{{ facepileMentionsHeading }}
+	<p>
+		<span class="[ h3 ]">
+			{{ facepileMentionsHeading }}
+		</span>
+		{%- for facepileMention in facepileMentions -%}
+			{%- if loop.last and not loop.first %}
+				and
+			{% endif %}
+			<a href="{{ facepileMention.author.url }}">
+				{{- facepileMention.author.name -}}
+			</a>
+			{%- if not loop.last and loop.length !== 2 -%}
+				,
+			{% endif %}
+			{%- if loop.last -%}
+				.
+			{% endif %}
+		{%- endfor -%}
 	</p>
-	{% for facepileMention in facepileMentions %}
-		<a href="{{ facepileMention.author.url }}" class="[ face-link ]">
-			<sl-avatar
-				class="[ author-photo-image ]"
-				image="{{ facepileMention.author.photo | imageLink }}"
-				initials="{{ mention.author.name[0] }}"
-				label="{{ facepileMention.author.name }}"
-			></sl-avatar>
-		</a>
-	{% endfor %}
 </div>
