--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -31,9 +31,7 @@ eleventyImport:
 			<li>
 				<details-utils animate>
 					<details class="[ interest-list ]">
-						<summary>
-							I'm a <span class="[ p-role ]">front-end developer/designer and accessibility specialist</span> with a strong interest in and passion for...
-						</summary>
+						<summary>I'm a <span class="[ p-role ]">front-end developer/designer and accessibility specialist</span> with a strong interest in and passion for...</summary>
 						<ul role="list" class="[ flow ]">
 							<li>
 								<sl-icon class="[ inline-icon ]" library="fa" name="fab-html5"></sl-icon>
@@ -106,9 +104,9 @@ eleventyImport:
 					</a>
 				</li>
 				<li>
-					<a href="https://www.threads.net/@ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-						{%- inlineIcon "local:Threads" -%}
-						<span>Threads</span>
+					<a href="https://elly.to/linkedin" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "fab:linkedin" -%}
+						<span>LinkedIn</span>
 					</a>
 				</li>
 				<li>
@@ -118,9 +116,9 @@ eleventyImport:
 					</a>
 				</li>
 				<li>
-					<a href="https://elly.to/linkedin" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-						{%- inlineIcon "fab:linkedin" -%}
-						<span>LinkedIn</span>
+					<a href="https://www.threads.net/@ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "local:Threads" -%}
+						<span>Threads</span>
 					</a>
 				</li>
 				<li>
