--- a/src/input/css/blocks/home.css
+++ b/src/input/css/blocks/home.css
@@ -28,6 +28,12 @@
 				color: var(--link);
 				cursor: pointer;
 				font-weight: var(--font-weight-body-bold);
+				text-decoration: underline;
+				text-decoration-thickness: 0.125rem;
+
+				&:hover {
+					text-decoration: none;
+				}
 			}
 
 			&[open] summary {
