--- a/src/input/css/blocks/card.css
+++ b/src/input/css/blocks/card.css
@@ -12,8 +12,8 @@
 	display: grid;
 	gap: var(--size-3);
 	grid-template-areas:
-		"image"
-		"content";
+		"content"
+		"image";
 	inline-size: fit-content;
 	padding: var(--size-4);
 	transition: box-shadow 300ms var(--ease-1), opacity 0.5s var(--ease-2);
@@ -25,7 +25,7 @@
 	}
 
 	@media (width >= 35em) {
-		grid-template-areas: "image content";
+		grid-template-areas: "content image";
 	}
 
 	.feed-item-card-image {
