Updating feed.atom

--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -25,7 +25,7 @@ eleventyImport:
 		</div>
 	</header>
 
-	<article class="[ about ]">
+	<article class="[ about ][ flow ]">
 		<img class="[ u-photo ]" src="/assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' hidden>
 		<ul role="list" class="[ p-note ] [ flow ]">
 			<li>
