--- a/src/input/root/feeds/feed.atom.njk
+++ b/src/input/root/feeds/feed.atom.njk
@@ -34,14 +34,12 @@ permalink: "feed.atom"
 			</updated>
 			<id>{{ absolutePostUrl }}</id>
 			<content xml:lang="{{ metadata.lang }}" type="html">
-				{%- filter escape -%}
-					<a href="https://brid.gy/publish/mastodon" class="p-bridgy-omit-link" hidden=""></a>
-					<p class="p-bridgy-mastodon-content" hidden="">{{ post.data.title }} 
-						{%- if post.data.bookmark.link -%}
-							<br> 🔖 {{ post.data.bookmark.link }}
-						{%- endif -%}
-						<br> 🔗 {{ absolutePostUrl }}</p>
-				{%- endfilter -%}
+{%- filter escape -%}
+<a href="https://brid.gy/publish/mastodon" class="p-bridgy-omit-link" hidden=""></a>
+<p class="p-bridgy-mastodon-content" hidden="">{{ post.data.title }} {% if post.data.bookmark.link %}
+<br> 🔖 <a href="{{ post.data.bookmark.link }}">{{ post.data.bookmark.link }}</a> {% endif %}
+<br> 🔗 <a href="{{ absolutePostUrl }}">{{ absolutePostUrl }}</a></p>
+{%- endfilter -%}
 				{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) | escape }}
 			</content>
 		</entry>
